# nepi_rui

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  boardenv.sh  devenv.sh  generate_license_headers.sh  numurus_rui.rosinstall  package.xml  prodenv.sh  requirements.txt  rsync_workspace_to_target.sh  rui.patch  setup.py
.docker/: Dockerfile
.travis/: travis.sh
claude/: RUI-ANALYSIS-AND-OVERHAUL-PLAN.md  WORKFLOW.md  mockup-01-dark-ops-console.html  mockup-02-light-minimal.html  mockup-03-data-dense-industrial.html  mockup-04-card-modular.html  mockup-05-field-high-contrast.html
etc/: nepi_rui.service  numurus_rui.service  start_rui.sh
etc/rui_config_mgr/: rui_config_mgr.yaml.num_factory
launch/: numurus_rui.launch  numurus_rui.service  rosbridge.launch  start_rui.sh  test_camera.launch
rui_webserver/: __main__.py  config.py  server.py  utils.py
rui_webserver/rui-app/: package-lock.json  package.json
rui_webserver/rui-app/public/: index.html
rui_webserver/rui-app/src/: App.js  Columns.js  ExternalLink.js  HorizontalDivider.js  Input.js  Label.js  Nav.js  Page.js  PageLock.js  Section.js  Select.js  Styles.js  index.js
scripts/: fake_data_pub.py  fake_nuid_publisher.py  fake_status_pub.py  nd_status_pub.py  rui_config_mgr.py  run_webserver.py
src/numurus_rui/: fake_data_node.py  image_recognition_publisher.py  nd_status_publisher.py  system_status_publisher.py
src/rui_webserver/: __init__.py  config.py  prebuild.py  server.py  utils.py
src/rui_webserver/rui-app/: .gitignore  config-overrides.js  img_filter.json  img_filter_3dx.json  img_filter_detection.json  package-lock.json  package.json
src/rui_webserver/rui-app/public/: Numurus - Software License Terms.html  commercial_license_request_instructions.html  index.html  manifest.json  nepi_license.html
src/rui_webserver/rui-app/src/: AdjustmentWidgets.js  AngleAdjustment.js  App.js  Applications.js  Automation.css  Automation.js  Background.js  BooleanIndicator.js  Button.js  CameraApp.js  CameraViewer.js  ColoredIndicator.js  Columns.js  ComponentRegistry.js  Control3DX.js  ControlIDX.js  Dashboard.js  DetectionApp.js  DragList.js  EmptyClass.js  EnableAdjustment.js  FileBrowser.js  Files.js  Help.js  HorizontalDivider.js  ImageSequencer.js  Input.js  LSX.js  Label.js  ListBox.css  ListBox.js  MainMenuDeploy.js  MainMenuDevelop.js  MultiImageViewer.js  NDControl.js  NDSensor.js  NEPI.js  NEPIConnect.js  Nav.js  NavPose.js  (+164 more)
src/rui_webserver/rui-app/src/archive/: Control3DX.js  NepiDevicePTX-Controls.js
src/rui_webserver/rui-app/src/assets/: Readme.txt  background.psd  logo.psd
src/rui_webserver/rui-app/src/keys/: rui_key
utilities/: install_rui.sh
