<?xml version="1.0"?>
<package format="2">
  <name>numurus_rui</name>
  <version>0.0.1</version>
  <description>Web server for the Resident User Interface of Numurus</description>

  <maintainer email="jmaximoff@numurus.com">Josh Maximoff</maintainer>
  <author email="jmaximoff@numurus.com">Josh Maximoff</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbridge_server</depend>
  <depend>num_sdk_msgs</depend>
  
  <export>
  </export>
</package>
